# Alexproject

project/CHAT/: CMakeLists.txt  README.md  autobuild.sh
project/CHAT/include/: public.hpp
project/CHAT/include/server/: chatserver.hpp  chatservice.hpp
project/CHAT/include/server/db/: db.hpp
project/CHAT/include/server/model/: friendmodel.hpp  group.hpp  groupmode.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
project/CHAT/include/server/redis/: redis.hpp
project/CHAT/src/client/: CMakeLists.txt  main.cpp
project/CHAT/src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
project/CHAT/src/server/db/: db.cpp
project/CHAT/src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
project/CHAT/src/server/redis/: redis.cpp
project/MyMuduo/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  CMakeLists.txt  Callbacks.h  Channel.cc  Channel.h  CurrentThread.cc  CurrentThread.h  DefaultPoller.cc  EPollPoller.cc  EPollPoller.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  InetAddress.cc  InetAddress.h  Logger.cc  Logger.h  Poller.cc  Poller.h  README.md  Socket.cc  Socket.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  Thread.cc  Thread.h  Timestamp.cc  Timestamp.h  autobuild.sh  graceclient.cc  graceserver.cc  noncopyable.h
project/testmuduo/: muduo_server.cpp
project/testmymuduo/: Makefile  testmuduo.cc  testserver
